--- a/help/iOS/0001.md
+++ b/help/iOS/0001.md
@@ -1,4 +1,9 @@
-How does Sync & Backup work?
+<!-- 
+---
+title: How does Sync & Backup work?
+--- 
+-->
+
 ## **How does Sync & Backup work?**
 
 <br />
