--- a/help/iOS/0002.md
+++ b/help/iOS/0002.md
@@ -1,4 +1,9 @@
-Having trouble with synchronization?
+<!-- 
+---
+title: Having trouble with synchronization?
+--- 
+-->
+
 ## **Having trouble with synchronization?**
 
 <br />
