--- a/help/iOS/0003.md
+++ b/help/iOS/0003.md
@@ -1,4 +1,9 @@
-How to switch between vaults?
+<!-- 
+---
+title: How to switch between vaults?
+--- 
+-->
+
 ## **How to switch between vaults?**
 
 <br />
