--- a/help/iOS/0002.md
+++ b/help/iOS/0002.md
@@ -8,9 +8,9 @@ title: Having trouble with synchronization?
 
 <br />
 
-*1. Make sure you are using the same iCloud account on all devices and Authenticator has access to iCloud Drive. [**Learn more...**](authenticator://help?question=008)*
+*1. Make sure you are using the same iCloud account on all devices and Authenticator has access to iCloud Drive. [**Learn more...**](passkeys://faq?question=008)*
 
 *2. Make sure you are using the same Vault on all devices.*
 
 Still have a question?
-[**Contact Us**](authenticator://contact?subject=Having%20trouble%20with%20synchronization%3F)
+[**Contact Us**](passkeys://contact?subject=Having%20trouble%20with%20synchronization%3F)
