--- a/help/iOS/0002.md
+++ b/help/iOS/0002.md
@@ -8,7 +8,7 @@ title: Having trouble with synchronization?
 
 <br />
 
-*1. Make sure you are using the same iCloud account on all devices and Authenticator has access to iCloud Drive. [**Learn more...**](passkeys://faq?question=008)*
+*1. Make sure you are using the same iCloud account on all devices and Passkeys App has access to iCloud Drive. [**Learn more...**](passkeys://faq?question=0004)*
 
 *2. Make sure you are using the same Vault on all devices.*
 
