--- a/help/iOS/0003.md
+++ b/help/iOS/0003.md
@@ -10,8 +10,8 @@ title: How to switch between vaults?
 
 To switch between vaults you need to follow the next steps:
 
-*1. Make sure you have the latest version of Authenticator on your device.*
-*2. Open Authenticator App and go to settings in the top left corner.*
+*1. Make sure you have the latest version of Passkeys App on your device.*
+*2. Open Passkeys App and go to settings in the top left corner.*
 *3. Scroll until the end of the screen and tap on **Advanced**.*
 *4. Tap **Start Over** and press on **Do it!**.*
 *5. Select **Restore** and choose the vault you want to restore.*
