--- a/help/iOS/0004.md
+++ b/help/iOS/0004.md
@@ -25,7 +25,7 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 <br />
 <br />
 
-*4. Turn on **Authenticator**.*
+*4. Turn on **Passkeys App**.*
 
 <p align="center">
 <img src="../assets/008_2.png" style="width:320px;"/>
