--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -4,11 +4,13 @@ title: How to set up Passkeys App as a main passkeys app?
 --- 
 -->
 
-### **I am getting the "Not Authenticated" message.**
+### **How to set up Passkeys App as a main passkeys app?**
 
 <br />
 
 Starting with iOS 17, Apple allows choosing the main passkeys app from your device settings. Follow these simple steps to set up it.
+
+<br />
 
 *1. Go to **Settings** app.* <img src="../assets/Settings.png" style="width:22px;"/>
 *2. Find and Tap **Passwords**.* <img src="../assets/Passwords.png" style="width:22px;"/>
