--- a/help/iOS/0003.md
+++ b/help/iOS/0003.md
@@ -12,11 +12,11 @@ To switch between vaults you need to follow the next steps:
 
 *1. Make sure you have the latest version of Passkeys App on your device.*
 
-*2. Open Passkeys App and go to settings in the top left corner.*
+*2. Open Passkeys App and introduce the wrong password.*
 
-*3. Scroll until the end of the screen and tap on **Advanced**.*
+*3. After, press on **Forgot password?**.*
 
-*4. Tap **Start Over** and press on **Do it!**.*
+*4. Tap **Start Over**.*
 
 *5. Select **Restore** and choose the vault you want to restore.*
 
