--- a/help/iOS/0004.md
+++ b/help/iOS/0004.md
@@ -22,7 +22,7 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 
 
 <p align="center">
-<img src="../assets/008_1.png" style="width:320px;"/>
+<img src="../assets/008_1.png" style="width:320px;" alt="Not authenticated message"/>
 </p>
 
 <br />
@@ -31,5 +31,5 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 *4. Turn on **Passkeys App**.*
 
 <p align="center">
-<img src="../assets/008_2.png" style="width:320px;"/>
+<img src="../assets/008_2.png" style="width:320px;" alt="authenticated image"/>
 </p>
