--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -12,18 +12,18 @@ Starting with iOS 17, Apple allows choosing the main passkeys app from your devi
 
 <br />
 
-*1. Go to **Settings** app.* <img src="../assets/Settings.png" style="width:22px;"/>
+*1. Go to **Settings** app.* <img src="../assets/Settings.png" style="width:22px;" alt="Settings App image"/>
 
-*2. Find and Tap **Passwords**.* <img src="../assets/Passwords.png" style="width:22px;"/>
+*2. Find and Tap **Passwords**.* <img src="../assets/Passwords.png" style="width:22px;" alt="Password image"/>
 
-*3. Tap **Passwords Options**.* <img src="../assets/PasswordOptions.png" style="width:22px;"/>
+*3. Tap **Passwords Options**.* <img src="../assets/PasswordOptions.png" style="width:22px;" alt="Password Options image"/>
 
-*4. Select **Passkeys App**.* <img src="../assets/PasskeysApp.png" style="width:22px;"/>
+*4. Select **Passkeys App**.* <img src="../assets/PasskeysApp.png" style="width:22px;" alt="Passkeys App image"/>
 
 <br />
 
 <p align="center">
-<img src="../assets/0005.png" style="width:320px;"/>
+<img src="../assets/0005.png" style="width:320px;" alt="SelectiCloud Passwords & Keychain image"/>
 </p>
 
 <br />
