added contact option

--- a/help/iOS/0003.md
+++ b/help/iOS/0003.md
@@ -21,3 +21,8 @@ To switch between vaults you need to follow the next steps:
 *5. Select **Restore** and choose the vault you want to restore.*
 
 *6. Introduce your password, and enable **Sync & Backup**.*
+
+<br />
+
+Still have a question?
+[**Contact Us**](passkeys://contact?subject=How%20to%20switch%20between%20vaults%3F)
