--- a/help/iOS/0004.md
+++ b/help/iOS/0004.md
@@ -33,3 +33,8 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 <p align="center">
 <img src="../assets/008_2.png" style="width:320px;" alt="authenticated image"/>
 </p>
+
+<br />
+
+Still have a question?
+[**Contact Us**](passkeys://contact?subject=I%20am%20getting%20the%20%22Not%20Authenticated%22%20message.)
