--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -29,3 +29,8 @@ Starting with iOS 17, Apple allows choosing the main passkeys app from your devi
 <br />
 
 `IMPORTANT`: Make sure to deselect **iCloud Passwords & Keychain** after selecting Passkeys App.
+
+<br />
+
+Still have a question?
+[**Contact Us**](passkeys://contact?subject=How%20to%20set%20up%20Passkeys%20App%20as%20a%20main%20passkeys%20app%3F)
