added 2 help articles

--- a/help/iOS/0004.md
+++ b/help/iOS/0004.md
@@ -4,7 +4,7 @@ title: I am getting the "Not Authenticated" message.
 --- 
 -->
 
-### **I am getting the "Not Authenticated" message.**
+## **I am getting the "Not Authenticated" message.**
 
 <br />
 
