--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -4,7 +4,7 @@ title: How to set up Passkeys App as a main passkeys app?
 --- 
 -->
 
-### **How to set up Passkeys App as a main passkeys app?**
+## **How to set up Passkeys App as a main passkeys app?**
 
 <br />
 
