--- a/help/iOS/0001.md
+++ b/help/iOS/0001.md
@@ -10,7 +10,7 @@ title: How does Sync & Backup work?
 
 All your data are protected with strong encryption while in iCloud and can be accessed only with your password. The changes you will make on this device will synchronize on all devices with the same iCloud account.
 
-`IMPORTANT`: You can enable the Sync & Backup only if you are **logged into an iCloud account** on your device, **iCloud Drive is enabled** and you have granted permission to Authenticator.
+`IMPORTANT`: You can enable the Sync & Backup only if you are **logged into an iCloud account** on your device, **iCloud Drive is enabled** and you have granted permission to Passkeys App.
 
 <br />
 
