--- a/help/iOS/0004.md
+++ b/help/iOS/0004.md
@@ -10,7 +10,7 @@ title: I am getting the "Not Authenticated" message.
 
 This issue is related to your iCloud configurations, looks like you have denied access to iCloud Drive or you don’t have an active iCloud account on your device. 
 
-Passkeys App needs access to your iCloud account and iCloud Drive to restore, synchronize and back up your accounts. All your data are protected with strong encryption while in iCloud.
+Password Manager App needs access to your iCloud account and iCloud Drive to restore, synchronize and back up your accounts. All your data are protected with strong encryption while in iCloud.
 
 You can enable the iCloud Drive on your iPhone and iPad by following these steps:
 
@@ -28,7 +28,7 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 <br />
 <br />
 
-*4. Turn on **Passkeys App**.*
+*4. Turn on **Password Manager**.*
 
 <p align="center">
 <img src="../assets/008_2.png" style="width:320px;" alt="authenticated image"/>
@@ -37,4 +37,4 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 <br />
 
 Still have a question?
-[**Contact Us**](passkeys://contact?subject=I%20am%20getting%20the%20%22Not%20Authenticated%22%20message.)
+[**Contact Us**](passwords://contact?subject=I%20am%20getting%20the%20%22Not%20Authenticated%22%20message.)
