--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -1,14 +1,14 @@
 <!-- 
 ---
-title: How to set up Passkeys App as a main passkeys app?
+title: How to set up Password Manager App as a main password manager app?
 --- 
 -->
 
-## **How to set up Passkeys App as a main passkeys app?**
+## **How to set up Password Manager App as a main password manager app?**
 
 <br />
 
-Starting with iOS 17, Apple allows choosing the main passkeys app from your device settings. Follow these simple steps to set up it.
+Starting with iOS 17, Apple allows choosing the main password manager app from your device settings. Follow these simple steps to set up it.
 
 <br />
 
@@ -18,7 +18,7 @@ Starting with iOS 17, Apple allows choosing the main passkeys app from your devi
 
 *3. Tap **Passwords Options**.* <img src="../assets/PasswordOptions.png" style="width:22px;" alt="Password Options image"/>
 
-*4. Select **Passkeys App**.* <img src="../assets/PasskeysApp.png" style="width:22px;" alt="Passkeys App image"/>
+*4. Select **Password Manager**.* <img src="../assets/PasskeysApp.png" style="width:22px;" alt="Passkeys App image"/>
 
 <br />
 
@@ -28,9 +28,9 @@ Starting with iOS 17, Apple allows choosing the main passkeys app from your devi
 
 <br />
 
-`IMPORTANT`: Make sure to deselect **iCloud Passwords & Keychain** after selecting Passkeys App.
+`IMPORTANT`: Make sure to deselect **iCloud Passwords & Keychain** after selecting Password Manager App.
 
 <br />
 
 Still have a question?
-[**Contact Us**](passkeys://contact?subject=How%20to%20set%20up%20Passkeys%20App%20as%20a%20main%20passkeys%20app%3F)
+[**Contact Us**](passwords://contact?subject=How%20to%20set%20up%20Password%20Manager%20App%20as%20a%20main%20passwords%20app%3F)
