--- a/help/iOS/0007.md
+++ b/help/iOS/0007.md
@@ -16,7 +16,7 @@ If you want to restore/synchronize your accounts on a new device, you can do thi
 
 Then follow these steps:
 
-*1. Download [**Passkeys App**](https://apps.apple.com/app/id1659205365).*
+*1. Download [**Password Manager App**](https://apps.apple.com/app/id1659205365).*
 
 *2. Press on **Restore**.*
 
@@ -27,4 +27,4 @@ Then follow these steps:
 <br />
 
 Still have a question?
-[**Contact Us**](passkeys://contact?subject=How%20to%20restore%2Fsynchronize%20my%20accounts%20on%20a%20new%20device%3F)
+[**Contact Us**](passwords://contact?subject=How%20to%20restore%2Fsynchronize%20my%20accounts%20on%20a%20new%20device%3F)
