--- a/help/iOS/0003.md
+++ b/help/iOS/0003.md
@@ -10,9 +10,9 @@ title: How to switch between vaults?
 
 To switch between vaults you need to follow the next steps:
 
-*1. Make sure you have the latest version of Passkeys App on your device.*
+*1. Make sure you have the latest version of Password Manager App on your device.*
 
-*2. Open Passkeys App and introduce the wrong password.*
+*2. Open Password Manager App and introduce the wrong password.*
 
 *3. After, press on **Forgot password?**.*
 
@@ -25,4 +25,4 @@ To switch between vaults you need to follow the next steps:
 <br />
 
 Still have a question?
-[**Contact Us**](passkeys://contact?subject=How%20to%20switch%20between%20vaults%3F)
+[**Contact Us**](passwords://contact?subject=How%20to%20switch%20between%20vaults%3F)
