--- a/help/iOS/0006.md
+++ b/help/iOS/0006.md
@@ -8,13 +8,13 @@ title: I forgot my password, how do I reset it?
 
 <br />
 
-All your data stored in Passkeys App is always end-to-end encrypted and your Password is never shared with anyone, even with us, this makes it impossible to restore your password. Unfortunately, the very last and only option available to continue using Passkeys App is to start over and create a new vault.
+All your data stored in Password Manager App is always end-to-end encrypted and your Password is never shared with anyone, even with us, this makes it impossible to restore your password. Unfortunately, the very last and only option available to continue using Password Manager App is to start over and create a new vault.
 
 <br />
 
 To start over and create a new vault you need to follow the next steps:
 
-*1. Open Passkeys App and introduce the wrong password.*
+*1. Open Password Manager App and introduce the wrong password.*
 
 *2. After press on **Forgot password**.*
 
@@ -24,9 +24,9 @@ Once you will confirm that you want to start over, you would be able to create a
 
 <br />
 
-However, if you remember your password and wish to switch between existing vaults, please follow the instructions in the article on [**How to switch between vaults?**](passkeys://faq?question=0003). This article provides step-by-step guidance on seamlessly switching between your vaults whenever you remember the associated password.
+However, if you remember your password and wish to switch between existing vaults, please follow the instructions in the article on [**How to switch between vaults?**](passwords://faq?question=0003). This article provides step-by-step guidance on seamlessly switching between your vaults whenever you remember the associated password.
 
 <br />
 
 Still have a question?
-[**Contact Us**](passkeys://contact?subject=I%20forgot%20my%20password%2C%20how%20do%20I%20reset%20it%3F)
+[**Contact Us**](passwords://contact?subject=I%20forgot%20my%20password%2C%20how%20do%20I%20reset%20it%3F)
