--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -18,7 +18,7 @@ Starting with iOS 17, Apple allows choosing the main password manager app from y
 
 *3. Tap **Passwords Options**.* <img src="../assets/PasswordOptions.png" style="width:22px;" alt="Password Options image"/>
 
-*4. Select **Password Manager**.* <img src="../assets/PasskeysApp.png" style="width:22px;" alt="Passkeys App image"/>
+*4. Select **Password Manager**.* <img src="../assets/PasswordsApp.png" style="width:22px;" alt="Passkeys App image"/>
 
 <br />
 
