changed name, to Passwords App

--- a/help/iOS/0002.md
+++ b/help/iOS/0002.md
@@ -8,7 +8,7 @@ title: Having trouble with synchronization?
 
 <br />
 
-*1. Make sure you are using the same iCloud account on all devices and Password Manager App has access to iCloud Drive. [**Learn more...**](passwords://faq?question=0004)*
+*1. Make sure you are using the same iCloud account on all devices and Passwords App has access to iCloud Drive. [**Learn more...**](passwords://faq?question=0004)*
 
 *2. Make sure you are using the same Vault on all devices.*
 
