--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -1,10 +1,10 @@
 <!-- 
 ---
-title: How to set up Password Manager App as a main password manager app?
+title: How to set up Passwords App as a main password manager app?
 --- 
 -->
 
-## **How to set up Password Manager App as a main password manager app?**
+## **How to set up Passwords App as a main password manager app?**
 
 <br />
 
@@ -18,7 +18,7 @@ Starting with iOS 17, Apple allows choosing the main password manager app from y
 
 *3. Tap **Passwords Options**.* <img src="../assets/PasswordOptions.png" style="width:22px;" alt="Password Options image"/>
 
-*4. Select **Password Manager**.* <img src="../assets/PasswordsApp.png" style="width:22px;" alt="Passkeys App image"/>
+*4. Select **Passwords App**.* <img src="../assets/PasswordsApp.png" style="width:22px;" alt="Passkeys App image"/>
 
 <br />
 
@@ -28,7 +28,7 @@ Starting with iOS 17, Apple allows choosing the main password manager app from y
 
 <br />
 
-`IMPORTANT`: Make sure to deselect **iCloud Passwords & Keychain** after selecting Password Manager App.
+`IMPORTANT`: Make sure to deselect **iCloud Passwords & Keychain** after selecting Passwords App.
 
 <br />
 
