--- a/help/iOS/0006.md
+++ b/help/iOS/0006.md
@@ -8,7 +8,7 @@ title: I forgot my password, how do I reset it?
 
 <br />
 
-All your data stored in Password Manager App is always end-to-end encrypted and your Password is never shared with anyone, even with us, this makes it impossible to restore your password. Unfortunately, the very last and only option available to continue using Password Manager App is to start over and create a new vault.
+All your data stored in Passwords App is always end-to-end encrypted and your Password is never shared with anyone, even with us, this makes it impossible to restore your password. Unfortunately, the very last and only option available to continue using Passwords App is to start over and create a new vault.
 
 <br />
 
