--- a/help/iOS/0004.md
+++ b/help/iOS/0004.md
@@ -10,7 +10,7 @@ title: I am getting the "Not Authenticated" message.
 
 This issue is related to your iCloud configurations, looks like you have denied access to iCloud Drive or you don’t have an active iCloud account on your device. 
 
-Password Manager App needs access to your iCloud account and iCloud Drive to restore, synchronize and back up your accounts. All your data are protected with strong encryption while in iCloud.
+Passwords App needs access to your iCloud account and iCloud Drive to restore, synchronize and back up your accounts. All your data are protected with strong encryption while in iCloud.
 
 You can enable the iCloud Drive on your iPhone and iPad by following these steps:
 
