--- a/help/iOS/0004.md
+++ b/help/iOS/0004.md
@@ -28,7 +28,7 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 <br />
 <br />
 
-*4. Turn on **Password Manager**.*
+*4. Turn on **Passwords App**.*
 
 <p align="center">
 <img src="../assets/008_2.png" style="width:320px;" alt="authenticated image"/>
