--- a/help/iOS/0009.md
+++ b/help/iOS/0009.md
@@ -4,6 +4,6 @@ title: How_to_add_a_member_to_shared_group?
 --- 
 -->
 
-## **How_to_add_a_member_to_shared_group?**
+## **How to add a member to a shared group?**
 
 # FIXME
