--- a/help/iOS/0007.md
+++ b/help/iOS/0007.md
@@ -16,7 +16,7 @@ If you want to restore/synchronize your accounts on a new device, you can do thi
 
 Then follow these steps:
 
-*1. Download [**Passwords App**](https://apps.apple.com/app/id1627460689).*
+*1. Download [**Password Manager by 2Stable**](https://apps.apple.com/app/id1627460689).*
 
 *2. Press on **Restore**.*
 
