--- a/help/iOS/0006.md
+++ b/help/iOS/0006.md
@@ -8,19 +8,21 @@ title: I forgot my password, how do I reset it?
 
 <br />
 
-All your data stored in Passwords App is always end-to-end encrypted and your Password is never shared with anyone, even with us, this makes it impossible to restore your password. Unfortunately, the very last and only option available to continue using Passwords App is to start over and create a new vault.
+All your data stored in Password Manager by 2Stable is always end-to-end encrypted, and your Master Password is never shared with anyone, not even with us. This makes it impossible to restore your Master Password if you forget it. Unfortunately, the very last and only option available to continue using Password Manager by 2Stable is to start over and create a new vault.
+
+Please note that you have unlimited attempts to enter your password, allowing you to try any combination you think might be correct.
 
 <br />
 
 To start over and create a new vault you need to follow the next steps:
 
-*1. Open Password Manager App and introduce the wrong password.*
+*1. Open Password Manager by 2Stable and introduce the wrong password.*
 
-*2. After press on **Forgot password**.*
+*2. Next, press on **Forgot password**.*
 
 *3. Select **Start Over**.*
 
-Once you will confirm that you want to start over, you would be able to create a new vault and start from zero.
+Once you confirm that you want to start over, you will be able to create a new vault and start from zero.
 
 <br />
 
