--- a/help/iOS/0006.md
+++ b/help/iOS/0006.md
@@ -16,7 +16,7 @@ Please note that you have unlimited attempts to enter your password, allowing yo
 
 To start over and create a new vault you need to follow the next steps:
 
-*1. Open Password Manager by 2Stable and introduce the wrong password.*
+*1. Open **Password Manager by 2Stable** and introduce the wrong password.*
 
 *2. Next, press on **Forgot password**.*
 
