--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -4,7 +4,7 @@ title: How to set up Passwords App as a main password manager app?
 --- 
 -->
 
-## **How to set up Passwords App as a main password manager app?**
+## **How to set up Password Manager by 2Stable as a main password manager app?**
 
 <br />
 
