--- a/help/iOS/0003.md
+++ b/help/iOS/0003.md
@@ -10,7 +10,7 @@ title: How to switch between vaults?
 
 To switch between vaults you need to follow the next steps:
 
-*1. Make sure you have the latest version of Passwords App on your device.*
+*1. Make sure you have the latest version of **Password Manager by 2Stable** on your device.*
 
 *2. Open Passwords App and introduce the wrong password.*
 
