--- a/help/iOS/0005.md
+++ b/help/iOS/0005.md
@@ -1,6 +1,6 @@
 <!-- 
 ---
-title: How to set up Passwords App as a main password manager app?
+title: How to set up Password Manager by 2Stable as a main password manager app?
 --- 
 -->
 
