--- a/help/iOS/0009.md
+++ b/help/iOS/0009.md
@@ -1,6 +1,6 @@
 <!-- 
 ---
-title: [Fix me] How to add a member to a shared group?
+title: Fix me -  How to add a member to a shared group?
 --- 
 -->
 
