--- a/help/iOS/0008.md
+++ b/help/iOS/0008.md
@@ -6,4 +6,14 @@ title: Fix me - How to add a passkey?
 
 ## **How to add a passkey?**
 
-# FIXME
+<br />
+
+If you're looking to add a passkey to an existing account or create a new one, just follow these steps:
+
+<br />
+
+1. Ensure Password Manager by 2Stable is set as your primary app for managing Passwords and Passkeys. Learn More...
+2. Visit the website where you wish to use passkeys (e.g., Google.com, PayPal.com)..
+3. Look for an option to set up Passkeys and tap 'Continue'.
+4. Choose whether to add the passkey to an existing account or create a new one.
+5. That's it! You're now ready to log in using your passkey.
