--- a/help/iOS/0008.md
+++ b/help/iOS/0008.md
@@ -16,4 +16,4 @@ If you're looking to add a passkey to an existing account or create a new one, j
 *2. Visit the website where you wish to use passkeys (e.g., **Google.com, PayPal.com**)..*
 *3. Look for an option to set up Passkeys and tap **Continue**.*
 *4. Choose whether to add the passkey to an existing account or create a new one.*
-5. That's it! You're now ready to log in using your passkey.
+*5. That's it! You're now ready to log in using your passkey.*
