--- a/help/iOS/0008.md
+++ b/help/iOS/0008.md
@@ -12,7 +12,7 @@ If you're looking to add a passkey to an existing account or create a new one, j
 
 <br />
 
-*1. Ensure **Password Manager by 2Stable** is set as your primary app for managing Passwords and Passkeys. Learn More...*
+*1. Ensure **Password Manager by 2Stable** is set as your primary app for managing Passwords and Passkeys. [**Learn more...**](passwords://faq?question=0006)*
 
 *2. Visit the website where you wish to use passkeys (e.g., **Google.com, PayPal.com**)..*
 
