--- a/help/iOS/0006.md
+++ b/help/iOS/0006.md
@@ -10,7 +10,7 @@ title: I forgot my password, how do I reset it?
 
 All your data stored in **Password Manager by 2Stable** is always end-to-end encrypted, and your Master Password is never shared with anyone, not even with us. This makes it impossible to restore your Master Password if you forget it. Unfortunately, the very last and only option available to continue using **Password Manager by 2Stable** is to start over and create a new vault.
 
-`IMPORTANT` You have unlimited attempts to enter your password, allowing you to try any combination you think might be correct.
+`IMPORTANT:` You have unlimited attempts to enter your password, allowing you to try any combination you think might be correct.
 
 <br />
 
