--- a/help/iOS/0008.md
+++ b/help/iOS/0008.md
@@ -12,13 +12,30 @@ If you're looking to add a passkey to an existing account or create a new one, j
 
 <br />
 
-*1. Ensure **Password Manager by 2Stable** is set as your primary app for managing Passwords and Passkeys.[**Learn more...**](passwords://faq?question=0005)*
+*1. Ensure **Password Manager by 2Stable** is set as your primary app for managing Passwords and Passkeys. [**Learn more...**](passwords://faq?question=0005)*
 
 *2. Visit the website where you wish to use passkeys (e.g., **Google.com, PayPal.com**)..*
 
 *3. Look for an option to set up Passkeys and tap **Continue**.*
 
+<p align="center">
+<img src="../assets/how-to-add-a-passkey-continue.png" style="width:320px;" alt="how to add a passkey - continue"/>
+</p>
+
 *4. Choose whether to add the passkey to an existing account or create a new one.*
 
-*5. That's it! You're now ready to log in using your passkey.*
+<p align="center">
+<img src="../assets/how-to-add-a-passkey-choose-the-method.png" style="width:320px;" alt="how to add a passkey - choose the method"/>
+</p>
 
+*5. Confirm and Save the Passkey*
+
+<p align="center">
+<img src="../assets/how-to-add-a-passkey-confirm.png" style="width:320px;" alt="how to add a passkey - confirm"/>
+</p>
+
+*6. That's it! You're now ready to log in using your passkey.*
+
+<p align="center">
+<img src="../assets/how-to-add-a-passkey-success.png" style="width:320px;" alt="how to add a passkey - success"/>
+</p>
