--- a/help/iOS/0009.md
+++ b/help/iOS/0009.md
@@ -1,9 +1,25 @@
 <!-- 
 ---
-title: How to add a member to a shared group?
+title: How to Find Your Profile QR Code?
 --- 
 -->
 
-## **How to add a member to a shared group?**
+## **How to Find Your Profile QR Code?**
 
-# FIXME
+
+*1. Open Password Manager by 2Stable on your device.*
+
+*2. Tap on "Settings" in the top-left corner*
+<p align="center">
+<img src="../assets/how-to-find-your-profile-qr-code-settings.png" style="width:320px;" alt="how to find your profile qr code - settings"/>
+</p>
+
+*3. Press on the profile section.*
+<p align="center">
+<img src="../assets/how-to-find-your-profile-qr-code-profile.png" style="width:320px;" alt="how to find your profile qr code - profile"/>
+</p>
+
+*3. Share your QR code with the "Shared Group" administrator.*
+<p align="center">
+<img src="../assets/how-to-find-your-profile-qr-code.png" style="width:320px;" alt="how to find your profile qr code"/>
+</p>
