--- a/help/iOS/0010.md
+++ b/help/iOS/0010.md
@@ -6,25 +6,35 @@ title: How to Add a New Member to a Shared Group?
 
 ## **How to Add a New Member to a Shared Group?**
 
+<br />
+
 *1. Tap on "New Group".*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group.png" style="width:320px;" alt="how to add a new member to a shared group - main"/>
 </p>
 
-*2. Choose a descriptive and tap on "Save".*
+<br />
+
+*2. Choose a descriptive name and tap on "Save" button.*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group-save.png" style="width:320px;" alt="how to add a new member to a shared group - save"/>
 </p>
+
+<br />
 
 *2. Press the "More Info" icon next to the group details.*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group-info.png" style="width:320px;" alt="how to add a new member to a shared group- more info"/>
 </p>
 
+<br />
+
 *3. Select "Add Members".*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group-add-memeber.png" style="width:320px;" alt="how to add a new member to a shared group - add member"/>
 </p>
+
+<br />
 
 *4. Scan or import the QR code of the member you wish to invite.*
 <p align="center">
