--- a/help/iOS/0009.md
+++ b/help/iOS/0009.md
@@ -1,10 +1,10 @@
 <!-- 
 ---
-title: How to Find Your Profile QR Code?
+title: How to find your profile QR Code?
 --- 
 -->
 
-## **How to Find Your Profile QR Code?**
+## **How to find your profile QR Code?**
 
 <br />
 
@@ -12,21 +12,21 @@ title: How to Find Your Profile QR Code?
 
 <br />
 
-*2. Tap on "Settings" in the top-left corner*
+*2. Tap on **Settings** in the top-left corner.*
 <p align="center">
 <img src="../assets/how-to-find-your-profile-qr-code-settings.png" style="width:320px;" alt="how to find your profile qr code - settings"/>
 </p>
 
 <br />
 
-*3. Press on the profile section.*
+*3. Tap the **QR Code** icon displayed next to your name.*
 <p align="center">
 <img src="../assets/how-to-find-your-profile-qr-code-profile.png" style="width:320px;" alt="how to find your profile qr code - profile"/>
 </p>
 
 <br />
 
-*3. Share your QR code with the "Shared Group" administrator.*
+*3. Share your QR Code with the **Shared Group** administrator.*
 <p align="center">
 <img src="../assets/how-to-find-your-profile-qr-code.png" style="width:320px;" alt="how to find your profile qr code"/>
 </p>
