--- a/help/iOS/0010.md
+++ b/help/iOS/0010.md
@@ -1,42 +1,46 @@
 <!-- 
 ---
-title: How to Add a New Member to a Shared Group?
+title: How to add a new member to a shared group?
 --- 
 -->
 
-## **How to Add a New Member to a Shared Group?**
+## **How to add a new member to a shared group?**
 
 <br />
 
-*1. Tap on "New Group".*
+*1. Tap on **New Group**.*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group.png" style="width:320px;" alt="how to add a new member to a shared group - main"/>
 </p>
 
 <br />
 
-*2. Choose a descriptive name and tap on "Save" button.*
+*2. Choose a descriptive name for the group and tap the **Save** button. You can also customize the group icon by tapping the **plus** button.*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group-save.png" style="width:320px;" alt="how to add a new member to a shared group - save"/>
 </p>
 
 <br />
 
-*2. Press the "More Info" icon next to the group details.*
+*2. Press the **More Info** icon next to the group details.*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group-info.png" style="width:320px;" alt="how to add a new member to a shared group- more info"/>
 </p>
 
 <br />
 
-*3. Select "Add Members".*
+*3. Tap **Add Member**.*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group-add-memeber.png" style="width:320px;" alt="how to add a new member to a shared group - add member"/>
 </p>
 
 <br />
 
-*4. Scan or import the QR code of the member you wish to invite.*
+*4. Scan or import the QR Code of the member you wish to invite.*
 <p align="center">
 <img src="../assets/how-to-add-a-new-member-to-a-shared-group-add-options.png" style="width:320px;" alt="how to add a new member to a shared group - add options"/>
 </p>
+
+<br />
+
+`NOTE`: Shared Groups can include up to 100 people.
