--- a/help/iOS/0009.md
+++ b/help/iOS/0009.md
@@ -26,7 +26,7 @@ title: How to find your profile QR Code?
 
 <br />
 
-*3. Share your QR Code with the **Shared Group** administrator.*
+*3. Share your QR Code with the **Group** administrator.*
 <p align="center">
 <img src="../assets/how-to-find-your-profile-qr-code.png" style="width:320px;" alt="how to find your profile qr code"/>
 </p>
