--- a/help/iOS/0010.md
+++ b/help/iOS/0010.md
@@ -43,4 +43,4 @@ title: How to add a new member to a shared group?
 
 <br />
 
-`NOTE`: Shared Groups can include up to 100 people.
+`NOTE`: Shared Groups can include up to 100 members.
