--- a/help/macOS/0001.md
+++ b/help/macOS/0001.md
@@ -1,10 +1,10 @@
 <!-- 
 ---
-title: How does Sync & Backup work? (macOS)
+title: How does Sync & Backup work?
 --- 
 -->
 
-## **How does Sync & Backup work? (macOS)**
+## **How does Sync & Backup work?**
 
 <br />
 
